--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,9 @@ services:
       context: ./backend
       dockerfile: Dockerfile
     ports:
-      - '3000:3000'
+      - '3500:3500'
     environment:
-      - PORT=3000
+      - PORT=3500
       - NODE_ENV=production
     depends_on:
       - kafka
@@ -16,16 +16,27 @@ services:
   kafka:
     image: wurstmeister/kafka:latest
     ports:
-      - '9092:9092'
+      - '9094:9092'
     environment:
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
-      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+     KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+     KAFKA_LISTENERS: INTERNAL://kafka:9092,OUTSIDE://kafka:9094
+     KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka:9092,OUTSIDE://localhost:9094
+     KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,OUTSIDE:PLAINTEXT
+     KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
 
   zookeeper:
-    image: wurstmeister/zookeeper:latest
-    ports:
-      - '2181:2181'
+      image: confluentinc/cp-zookeeper:latest
+      ports:
+        - "2181:2181"
+      environment:
+        ZOOKEEPER_CLIENT_PORT: 2181
+        ZOOKEEPER_TICK_TIME: 2000
+        ZOOKEEPER_SYNC_LIMIT: 2  
+  
+  
+  ##zookeeper:
+    #image: wurstmeister/zookeeper:latest
+    #ports:
+     # - '2181:2181'
